@@ -21,7 +21,7 @@
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="4"/>
       <MinorVersionNr Value="12"/>
-      <BuildNr Value="9"/>
+      <BuildNr Value="11"/>
       <StringTable Comments="Compiled with Lazarus 1.6.4 / FPC 3.0.2" CompanyName="uib gmbh (uib.de / opsi.org)" FileDescription="opsi-script" InternalName="winst64.exe" LegalCopyright="AGPL v3" LegalTrademarks="opsi / opsi.org / open pc server integration" OriginalFilename="winst64.exe" ProductName="opsi-script" ProductVersion="4.0.7"/>
     </VersionInfo>
     <BuildModes Count="4" Active="Release">
@@ -198,10 +198,9 @@
       <Unit0>
         <Filename Value="winst64.lpr"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <TopLine Value="9"/>
-        <CursorPos X="11" Y="19"/>
+        <CursorPos X="34" Y="19"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -464,8 +463,9 @@
       </Unit27>
       <Unit28>
         <Filename Value="changelog.txt"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <CursorPos X="70" Y="13"/>
+        <CursorPos X="42" Y="40"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -604,8 +604,8 @@
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="14"/>
-        <TopLine Value="43"/>
-        <CursorPos X="23" Y="74"/>
+        <TopLine Value="13716"/>
+        <CursorPos X="29" Y="13754"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -751,7 +751,7 @@
         <EditorIndex Value="18"/>
         <TopLine Value="15"/>
         <CursorPos X="12" Y="39"/>
-        <UsageCount Value="27"/>
+        <UsageCount Value="28"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit63>
@@ -768,7 +768,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="36"/>
+        <UsageCount Value="39"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit65>
       <Unit66>
@@ -778,7 +778,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit66>
       <Unit67>
@@ -788,7 +788,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit67>
       <Unit68>
@@ -798,7 +798,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit68>
       <Unit69>
@@ -808,7 +808,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit69>
       <Unit70>
@@ -818,7 +818,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit70>
       <Unit71>
@@ -828,7 +828,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit71>
       <Unit72>
@@ -838,7 +838,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit72>
       <Unit73>
@@ -848,7 +848,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit73>
       <Unit74>
@@ -858,7 +858,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit74>
       <Unit75>
@@ -867,7 +867,7 @@
         <EditorIndex Value="7"/>
         <TopLine Value="430"/>
         <CursorPos Y="472"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit75>
@@ -878,7 +878,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="32"/>
+        <UsageCount Value="35"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit76>
       <Unit77>
@@ -898,7 +898,7 @@
         <EditorIndex Value="16"/>
         <TopLine Value="7"/>
         <CursorPos X="58" Y="42"/>
-        <UsageCount Value="27"/>
+        <UsageCount Value="30"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -907,123 +907,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="1300" Column="14" TopLine="46"/>
+        <Caret Line="2136" Column="35" TopLine="2056"/>
       </Position1>
       <Position2>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="1402" Column="8" TopLine="1385"/>
+        <Caret Line="2192" Column="6" TopLine="2164"/>
       </Position2>
       <Position3>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2136" Column="35" TopLine="2056"/>
+        <Caret Line="2253" Column="10" TopLine="2221"/>
       </Position3>
       <Position4>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2192" Column="6" TopLine="2164"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="10683" Column="33" TopLine="10658"/>
       </Position4>
       <Position5>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2253" Column="10" TopLine="2221"/>
+        <Caret Line="2277" Column="33" TopLine="2243"/>
       </Position5>
       <Position6>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10683" Column="33" TopLine="10658"/>
-      </Position6>
-      <Position7>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2277" Column="33" TopLine="2243"/>
-      </Position7>
-      <Position8>
         <Filename Value="osfuncwin2.pas"/>
         <Caret Line="2306" Column="47" TopLine="2291"/>
-      </Position8>
-      <Position9>
+      </Position6>
+      <Position7>
         <Filename Value="osfunc.pas"/>
         <Caret Line="420" Column="10" TopLine="394"/>
+      </Position7>
+      <Position8>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="11892" Column="16" TopLine="11867"/>
+      </Position8>
+      <Position9>
+        <Filename Value="oslistedit.pas"/>
+        <Caret Line="2" Column="19"/>
       </Position9>
       <Position10>
         <Filename Value="osparser.pas"/>
-        <Caret Line="11892" Column="16" TopLine="11867"/>
+        <Caret Line="16767" Column="36" TopLine="16739"/>
       </Position10>
       <Position11>
-        <Filename Value="oslistedit.pas"/>
-        <Caret Line="2" Column="19"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1433" Column="48" TopLine="1403"/>
       </Position11>
       <Position12>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="16767" Column="36" TopLine="16739"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2064" Column="22" TopLine="2055"/>
       </Position12>
       <Position13>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1433" Column="48" TopLine="1403"/>
+        <Caret Line="2021" Column="36" TopLine="1984"/>
       </Position13>
       <Position14>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2064" Column="22" TopLine="2055"/>
+        <Caret Line="2135" Column="39" TopLine="2092"/>
       </Position14>
       <Position15>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2021" Column="36" TopLine="1984"/>
+        <Caret Line="1992" Column="40" TopLine="1900"/>
       </Position15>
       <Position16>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2135" Column="39" TopLine="2092"/>
+        <Caret Line="2371" Column="44" TopLine="2333"/>
       </Position16>
       <Position17>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1992" Column="40" TopLine="1900"/>
+        <Caret Line="1743" Column="5" TopLine="1724"/>
       </Position17>
       <Position18>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2371" Column="44" TopLine="2333"/>
+        <Caret Line="2353" Column="73" TopLine="2348"/>
       </Position18>
       <Position19>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1743" Column="5" TopLine="1724"/>
+        <Caret Line="2799" Column="13" TopLine="2477"/>
       </Position19>
       <Position20>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2353" Column="73" TopLine="2348"/>
+        <Caret Line="2015" Column="34" TopLine="2000"/>
       </Position20>
       <Position21>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2799" Column="13" TopLine="2477"/>
+        <Caret Line="1181" Column="11" TopLine="1162"/>
       </Position21>
       <Position22>
         <Filename Value="osmain.pas"/>
-        <Caret Line="2015" Column="34" TopLine="2000"/>
+        <Caret Line="943" Column="5" TopLine="924"/>
       </Position22>
       <Position23>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1181" Column="11" TopLine="1162"/>
+        <Caret Line="986" Column="5" TopLine="967"/>
       </Position23>
       <Position24>
         <Filename Value="osmain.pas"/>
-        <Caret Line="943" Column="5" TopLine="924"/>
+        <Caret Line="1194" Column="11" TopLine="1175"/>
       </Position24>
       <Position25>
         <Filename Value="osmain.pas"/>
-        <Caret Line="986" Column="5" TopLine="967"/>
+        <Caret Line="1400" Column="3" TopLine="1381"/>
       </Position25>
       <Position26>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1194" Column="11" TopLine="1175"/>
+        <Caret Line="1479" Column="5" TopLine="1460"/>
       </Position26>
       <Position27>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1400" Column="3" TopLine="1381"/>
+        <Caret Line="2024" TopLine="2002"/>
       </Position27>
       <Position28>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1479" Column="5" TopLine="1460"/>
+        <Caret Line="2020" Column="16" TopLine="2003"/>
       </Position28>
       <Position29>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="2024" TopLine="2002"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="74" Column="23" TopLine="43"/>
       </Position29>
       <Position30>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="2020" Column="16" TopLine="2003"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="4671" Column="27" TopLine="4652"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
