@@ -5,6 +5,16 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 ##################################################################
 
+opsi-winst/opsi-script (4.12.0.11) stable; urgency=low
+
+  * Additional fix for Support brackets '[]' in Registry keys
+    * osfunc: function posFromEnd(const substr : string; const s : string) : integer;
+    * osparser: doRegistryHack: openkey, deletekey in Registry sections
+    * osparser: evaluatestring: GetRegistryStringValue*
+
+-- Detlef Oertel <d.oertel@uib.de>  Wed, 12 Dec 2017:15:00:00 +0200
+
+
 opsi-winst/opsi-script (4.12.0.10) stable; urgency=low
 
   * osdefinedfunctions: TOsDefinedFunction.call: free local Vars on leaving the function; fixes #3230
